Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46491

QML: Audio freezes the application UI if e.g. download an mp3 file from a remote location

    XMLWordPrintable

Details

    • 63c53d21bd05465739635ac259441b17f20a37a8

    Description

      If e.g. an .mp3 file is being downloaded from a remote location, the UI freezes until the download is finished.

      The attached example application can be used to reproduce the issue.

      Steps to reproduce:
      1. build and run the example
      2. check that the time is updating on the top of the view
      2. tap on the view
      3. check the time

      Expected result:
      The time should be updating eventhough there is a download ongoing

      Actual result:
      The UI is frozen, the time field isn't updating when there is a download ongoing

      The issue is even worse if you comment the 'autoLoad:false' from the example. At the startup it shows a black screen until the download is over.

      Attachments

        1. qtbug_46491.zip
          311 kB
          Qt Support
        For Gerrit Dashboard: QTBUG-46491
        # Subject Branch Project Status CR V

        Activity

          People

            stromme Christian
            qtcomsupport Qt Support
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes